<resources>
    <string name="app_name">healthier</string>
    <string name="welcome">Welcome</string>
    <string name="start_button">Start</string>
    <string name="copy_right">Copyright ©2022 healthier\nAll rights reserved</string>
    <string name="follow_instructions">Follow The Instructions</string>
    <string name="move_up">Move The Phone UP</string>
    <string name="move_down">Move The Phone Down</string>
    <string name="hold_phone">Hold The Phone</string>
    <string name="test_results">Test Results</string>
    <string name="your_results">Your Results:</string>
</resources>