<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity"
    android:background="@color/green_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/upper_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_circle"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textAlignment="center"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/start_circle"
        android:text="@string/start_button"
        android:textSize="40sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/lower_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/top_circle"
        android:rotationX="180"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|top"
        >

        <TextView
            android:id="@+id/copy_rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_right"
            android:textColor="@color/white"
            android:rotationX="180"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            android:textAlignment="center"
            />

    </LinearLayout>


</RelativeLayout>