<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    tools:context=".HoldPhone">

    <LinearLayout
        android:id="@+id/upper_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_circle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/follow_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_instructions"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/instruction_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/hold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold_phone"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lower_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/top_circle"
        android:gravity="center_horizontal|top"
        android:rotationX="180">

        <TextView
            android:id="@+id/copy_rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:rotationX="180"
            android:text="@string/copy_right"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

</RelativeLayout>