<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovePhoneUp"
    android:background="@color/green_background">

    <LinearLayout
        android:id="@+id/upper_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_circle"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/follow_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_instructions"
            android:textSize="28sp"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/instruction_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/move_up_animation"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/arrow_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_up"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lower_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/top_circle"
        android:rotationX="180"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|top"
        >

        <TextView
            android:id="@+id/copy_rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_right"
            android:textColor="@color/white"
            android:rotationX="180"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            android:textAlignment="center"
            />

    </LinearLayout>

</RelativeLayout>