<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity"
    android:background="@color/green_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/upper_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_circle"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/test_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_results"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textAlignment="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/test_results_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/upper_ellipse"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/test_results_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_results"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/test_results_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/results_txt_note"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="There is a risk of developing Parkinson's disease.
The attending physician at the HMO should be contacted as soon as possible"
            android:textColor="#000"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lower_ellipse"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/top_circle"
        android:rotationX="180"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|top"
        >

        <TextView
            android:id="@+id/copy_rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_right"
            android:textColor="@color/white"
            android:rotationX="180"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            android:textAlignment="center"
            />

    </LinearLayout>


</RelativeLayout>